Fix page overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body { 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-    min-height: 100vh;
+    margin: 0 auto;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
